[update]スペースキー打鍵で弾が発射できるように

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
   <ul>
     <li>
-      <img id="invader" class="invader invader1" src="invader.svg" alt="">
+      <img id="invader1" class="invader" src="invader.svg" alt="">
     </li>
     <li>
-      <img class="invader" src="invader.svg" alt="">
+      <img id="invader2" class="invader" src="invader.svg" alt="">
     </li>
     <li>
       <img class="invader" src="invader.svg" alt="">
     </li>
   </ul>
+
+  <!-- <i class="fas fa-grip-lines-vertical"></i> -->
+  <i id="starship" class="fas fa-place-of-worship"></i>
 
   <script src="main.js"></script>
 </body>
