[update]弾丸とインベーダーの座標計算と簡易の当たり判定を追加

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
-<body>
+<body id="container">
   <ul>
     <li>
       <img id="invader1" class="invader" src="invader.svg" alt="">
