--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body id="container">
-  <ul>
+  <ul id="invaders">
     <li>
       <img id="invader1" class="invader" src="invader.svg" alt="">
     </li>
